day3 part2 solution

--- a/day3/day3.html
+++ b/day3/day3.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script type="module" src="./day3.js"></script>
+    <script type="module" src="./day3part2.js"></script>
     <title>Day3</title>
-</head>
-<body>
-    
-</body>
+  </head>
+  <body></body>
 </html>
