--- a/day4/day4.html
+++ b/day4/day4.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script type="module" src="day4.js"></script>
+    <script type="module" src="day4part2.js"></script>
     <title>Day4</title>
   </head>
   <body></body>
