--- a/day5/day5.html
+++ b/day5/day5.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script type="module" src="./day5.js"></script>
+    <script type="module" src="./day5part2.js"></script>
     <title>Day5</title>
   </head>
   <body></body>
